--- a/Course Lessons - C++/Lesson 4 - LCD C++/Objects/LCD_Cpp.htm
+++ b/Course Lessons - C++/Lesson 4 - LCD C++/Objects/LCD_Cpp.htm
@@ -3,9 +3,9 @@
 <title>Static Call Graph - [.\Objects\LCD_Cpp.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\LCD_Cpp.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Thu Oct 14 20:37:38 2021
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Thu Oct 14 22:51:21 2021
 <BR><P>
-<H3>Maximum Stack Usage =        392 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
+<H3>Maximum Stack Usage =        400 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
 __rt_entry_main &rArr; main &rArr; LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 <P>
@@ -219,7 +219,7 @@ Global Symbols
 <P><STRONG><a name="[97]"></a>__rt_entry_postsh_1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, __rtentry2.o(.ARM.Collect$$rtentry$$00000009))
 
 <P><STRONG><a name="[54]"></a>__rt_entry_main</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, __rtentry2.o(.ARM.Collect$$rtentry$$0000000D))
-<BR><BR>[Stack]<UL><LI>Max Depth = 392 + Unknown Stack Size
+<BR><BR>[Stack]<UL><LI>Max Depth = 400 + Unknown Stack Size
 <LI>Call Chain = __rt_entry_main &rArr; main &rArr; LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[55]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
@@ -628,7 +628,7 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[6a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteByte(GPIO_PinState, char)
 </UL>
 <BR>[Called By]<UL><LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::PrintInteger(unsigned)
-<LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(const char*)
+<LI><a href="#[70]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(const char*)
 </UL>
 
 <P><STRONG><a name="[6b]"></a>LCD::WriteNibble(char, unsigned char)</STRONG> (Thumb, 174 bytes, Stack size 32 bytes, lcd.o(i._ZN3LCD11WriteNibbleEch))
@@ -640,17 +640,18 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[6a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteByte(GPIO_PinState, char)
 </UL>
 
-<P><STRONG><a name="[6d]"></a>LCD::PrintInteger(unsigned)</STRONG> (Thumb, 40 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD12PrintIntegerEj))
-<BR><BR>[Stack]<UL><LI>Max Depth = 96<LI>Call Chain = LCD::PrintInteger(unsigned) &rArr; LCD::Print(char) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<P><STRONG><a name="[6d]"></a>LCD::PrintInteger(unsigned)</STRONG> (Thumb, 42 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD12PrintIntegerEj))
+<BR><BR>[Stack]<UL><LI>Max Depth = 96<LI>Call Chain = LCD::PrintInteger(unsigned) &rArr; LCD::PrintString(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
-<BR>[Calls]<UL><LI><a href="#[6e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(char)
+<BR>[Calls]<UL><LI><a href="#[6a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteByte(GPIO_PinState, char)
 <LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::PrintString(const char*)
-<LI><a href="#[6f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IntegerToString(unsigned, char*)
+<LI><a href="#[6e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IntegerToString(unsigned, char*)
 </UL>
-<BR>[Called By]<UL><LI><a href="#[72]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned char&)
+<BR>[Called By]<UL><LI><a href="#[72]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned&)
+<LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned char&)
 </UL>
 
-<P><STRONG><a name="[70]"></a>LCD::Clear()</STRONG> (Thumb, 16 bytes, Stack size 8 bytes, lcd.o(i._ZN3LCD5ClearEv))
+<P><STRONG><a name="[6f]"></a>LCD::Clear()</STRONG> (Thumb, 16 bytes, Stack size 8 bytes, lcd.o(i._ZN3LCD5ClearEv))
 <BR><BR>[Stack]<UL><LI>Max Depth = 72<LI>Call Chain = LCD::Clear() &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteByte(GPIO_PinState, char)
@@ -658,7 +659,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[55]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[71]"></a>LCD::Print(const char*)</STRONG> (Thumb, 16 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD5PrintEPKc))
+<P><STRONG><a name="[70]"></a>LCD::Print(const char*)</STRONG> (Thumb, 16 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD5PrintEPKc))
 <BR><BR>[Stack]<UL><LI>Max Depth = 96<LI>Call Chain = LCD::Print(const char*) &rArr; LCD::PrintString(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::PrintString(const char*)
@@ -666,20 +667,20 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[55]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[72]"></a>LCD::Print(unsigned char&)</STRONG> (Thumb, 16 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD5PrintERh))
-<BR><BR>[Stack]<UL><LI>Max Depth = 112<LI>Call Chain = LCD::Print(unsigned char&) &rArr; LCD::PrintInteger(unsigned) &rArr; LCD::Print(char) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<P><STRONG><a name="[71]"></a>LCD::Print(unsigned char&)</STRONG> (Thumb, 16 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD5PrintERh))
+<BR><BR>[Stack]<UL><LI>Max Depth = 112<LI>Call Chain = LCD::Print(unsigned char&) &rArr; LCD::PrintInteger(unsigned) &rArr; LCD::PrintString(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::PrintInteger(unsigned)
 </UL>
 <BR>[Called By]<UL><LI><a href="#[55]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[6e]"></a>LCD::Print(char)</STRONG> (Thumb, 18 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD5PrintEc))
-<BR><BR>[Stack]<UL><LI>Max Depth = 80<LI>Call Chain = LCD::Print(char) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<P><STRONG><a name="[72]"></a>LCD::Print(unsigned&)</STRONG> (Thumb, 16 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD5PrintERj))
+<BR><BR>[Stack]<UL><LI>Max Depth = 112<LI>Call Chain = LCD::Print(unsigned&) &rArr; LCD::PrintInteger(unsigned) &rArr; LCD::PrintString(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
-<BR>[Calls]<UL><LI><a href="#[6a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteByte(GPIO_PinState, char)
+<BR>[Calls]<UL><LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::PrintInteger(unsigned)
 </UL>
-<BR>[Called By]<UL><LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::PrintInteger(unsigned)
+<BR>[Called By]<UL><LI><a href="#[55]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
 <P><STRONG><a name="[73]"></a>LCD::SetCursor(unsigned char, unsigned char)</STRONG> (Thumb, 46 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD9SetCursorEhh))
@@ -696,11 +697,11 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[6c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_GPIO_WritePin
 <LI><a href="#[6b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteNibble(char, unsigned char)
 </UL>
-<BR>[Called By]<UL><LI><a href="#[6e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(char)
+<BR>[Called By]<UL><LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::PrintInteger(unsigned)
 <LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::PrintString(const char*)
 <LI><a href="#[74]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&)
 <LI><a href="#[73]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::SetCursor(unsigned char, unsigned char)
-<LI><a href="#[70]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Clear()
+<LI><a href="#[6f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Clear()
 </UL>
 
 <P><STRONG><a name="[74]"></a>LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&)</STRONG> (Thumb, 266 bytes, Stack size 216 bytes, lcd.o(i._ZN3LCDC1ER11pinStruct_tS1_S1_S1_S1_S1_))
@@ -716,14 +717,15 @@ Global Symbols
 
 <P><STRONG><a name="[a5]"></a>LCD::LCD__sub_object(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&)</STRONG> (Thumb, 0 bytes, Stack size 216 bytes, lcd.o(i._ZN3LCDC1ER11pinStruct_tS1_S1_S1_S1_S1_), UNUSED)
 
-<P><STRONG><a name="[55]"></a>main</STRONG> (Thumb, 166 bytes, Stack size 112 bytes, main.o(i.main))
-<BR><BR>[Stack]<UL><LI>Max Depth = 392<LI>Call Chain = main &rArr; LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<P><STRONG><a name="[55]"></a>main</STRONG> (Thumb, 200 bytes, Stack size 120 bytes, main.o(i.main))
+<BR><BR>[Stack]<UL><LI>Max Depth = 400<LI>Call Chain = main &rArr; LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[74]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&)
 <LI><a href="#[73]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::SetCursor(unsigned char, unsigned char)
-<LI><a href="#[72]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned char&)
-<LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(const char*)
-<LI><a href="#[70]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Clear()
+<LI><a href="#[72]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned&)
+<LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned char&)
+<LI><a href="#[70]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(const char*)
+<LI><a href="#[6f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Clear()
 <LI><a href="#[68]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;System_Init()
 <LI><a href="#[5d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_Delay
 </UL>
@@ -741,7 +743,7 @@ Global Symbols
 <H3>
 Local Symbols
 </H3>
-<P><STRONG><a name="[6f]"></a>IntegerToString(unsigned, char*)</STRONG> (Thumb, 68 bytes, Stack size 12 bytes, lcd.o(i._Z15IntegerToStringjPc))
+<P><STRONG><a name="[6e]"></a>IntegerToString(unsigned, char*)</STRONG> (Thumb, 68 bytes, Stack size 12 bytes, lcd.o(i._Z15IntegerToStringjPc))
 <BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = IntegerToString(unsigned, char*)
 </UL>
 <BR>[Called By]<UL><LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::PrintInteger(unsigned)
