updated naming convention

--- a/Course Lessons - C++/Lesson 6 - Tic Tac Toe/Objects/TicTacToe_Cpp.htm
+++ b/Course Lessons - C++/Lesson 6 - Tic Tac Toe/Objects/TicTacToe_Cpp.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\TicTacToe_Cpp.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\TicTacToe_Cpp.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Mon Oct 18 08:19:34 2021
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Tue Oct 19 11:26:14 2021
 <BR><P>
 <H3>Maximum Stack Usage =        408 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -652,7 +652,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[72]"></a>Game_DisplayMenu(LCD&)</STRONG> (Thumb, 84 bytes, Stack size 8 bytes, game.o(i._Z16Game_DisplayMenuR3LCD))
-<BR><BR>[Stack]<UL><LI>Max Depth = 104<LI>Call Chain = Game_DisplayMenu(LCD&) &rArr; LCD::Print(const char*) &rArr; LCD::PrintString(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<BR><BR>[Stack]<UL><LI>Max Depth = 104<LI>Call Chain = Game_DisplayMenu(LCD&) &rArr; LCD::Print(const char*) &rArr; LCD::WriteBytes(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::SetCursor(unsigned char, unsigned char)
 <LI><a href="#[6f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(const char*)
@@ -663,7 +663,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[75]"></a>Game_DisplayIntro(LCD&)</STRONG> (Thumb, 84 bytes, Stack size 8 bytes, game.o(i._Z17Game_DisplayIntroR3LCD))
-<BR><BR>[Stack]<UL><LI>Max Depth = 104<LI>Call Chain = Game_DisplayIntro(LCD&) &rArr; LCD::Print(const char*) &rArr; LCD::PrintString(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<BR><BR>[Stack]<UL><LI>Max Depth = 104<LI>Call Chain = Game_DisplayIntro(LCD&) &rArr; LCD::Print(const char*) &rArr; LCD::WriteBytes(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::SetCursor(unsigned char, unsigned char)
 <LI><a href="#[6f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(const char*)
@@ -673,7 +673,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[76]"></a>Game_DisplayRules(LCD&)</STRONG> (Thumb, 170 bytes, Stack size 8 bytes, game.o(i._Z17Game_DisplayRulesR3LCD))
-<BR><BR>[Stack]<UL><LI>Max Depth = 104<LI>Call Chain = Game_DisplayRules(LCD&) &rArr; LCD::Print(const char*) &rArr; LCD::PrintString(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<BR><BR>[Stack]<UL><LI>Max Depth = 104<LI>Call Chain = Game_DisplayRules(LCD&) &rArr; LCD::Print(const char*) &rArr; LCD::WriteBytes(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::SetCursor(unsigned char, unsigned char)
 <LI><a href="#[6f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(const char*)
@@ -683,8 +683,8 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[59]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[77]"></a>LCD::PrintString(const char*)</STRONG> (Thumb, 28 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD11PrintStringEPKc))
-<BR><BR>[Stack]<UL><LI>Max Depth = 80<LI>Call Chain = LCD::PrintString(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<P><STRONG><a name="[77]"></a>LCD::WriteBytes(const char*)</STRONG> (Thumb, 28 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD10WriteBytesEPKc))
+<BR><BR>[Stack]<UL><LI>Max Depth = 80<LI>Call Chain = LCD::WriteBytes(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[78]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteByte(GPIO_PinState, char)
 </UL>
@@ -712,9 +712,9 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[6f]"></a>LCD::Print(const char*)</STRONG> (Thumb, 16 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD5PrintEPKc))
-<BR><BR>[Stack]<UL><LI>Max Depth = 96<LI>Call Chain = LCD::Print(const char*) &rArr; LCD::PrintString(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<BR><BR>[Stack]<UL><LI>Max Depth = 96<LI>Call Chain = LCD::Print(const char*) &rArr; LCD::WriteBytes(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
-<BR>[Calls]<UL><LI><a href="#[77]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::PrintString(const char*)
+<BR>[Calls]<UL><LI><a href="#[77]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteBytes(const char*)
 </UL>
 <BR>[Called By]<UL><LI><a href="#[76]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Game_DisplayRules(LCD&)
 <LI><a href="#[75]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Game_DisplayIntro(LCD&)
@@ -748,7 +748,7 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[79]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteNibble(char, unsigned char)
 <LI><a href="#[7a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_GPIO_WritePin
 </UL>
-<BR>[Called By]<UL><LI><a href="#[77]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::PrintString(const char*)
+<BR>[Called By]<UL><LI><a href="#[77]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteBytes(const char*)
 <LI><a href="#[6e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::SetCursor(unsigned char, unsigned char)
 <LI><a href="#[74]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(char)
 <LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Clear()
