--- a/Course Lessons - C++/Lesson 4 - LCD C++/Objects/LCD_Cpp.htm
+++ b/Course Lessons - C++/Lesson 4 - LCD C++/Objects/LCD_Cpp.htm
@@ -3,9 +3,9 @@
 <title>Static Call Graph - [.\Objects\LCD_Cpp.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\LCD_Cpp.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Tue Oct 19 23:42:55 2021
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Tue Oct 26 15:29:01 2021
 <BR><P>
-<H3>Maximum Stack Usage =        352 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
+<H3>Maximum Stack Usage =        344 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
 __rt_entry_main &rArr; main &rArr; LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 <P>
@@ -219,7 +219,7 @@ Global Symbols
 <P><STRONG><a name="[98]"></a>__rt_entry_postsh_1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, __rtentry2.o(.ARM.Collect$$rtentry$$00000009))
 
 <P><STRONG><a name="[55]"></a>__rt_entry_main</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, __rtentry2.o(.ARM.Collect$$rtentry$$0000000D))
-<BR><BR>[Stack]<UL><LI>Max Depth = 352 + Unknown Stack Size
+<BR><BR>[Stack]<UL><LI>Max Depth = 344 + Unknown Stack Size
 <LI>Call Chain = __rt_entry_main &rArr; main &rArr; LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
@@ -639,8 +639,8 @@ Global Symbols
 <LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteBytes(const char*)
 <LI><a href="#[6e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;IntegerToString(unsigned, char*)
 </UL>
-<BR>[Called By]<UL><LI><a href="#[72]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned&)
-<LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned char&)
+<BR>[Called By]<UL><LI><a href="#[72]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned)
+<LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned char)
 </UL>
 
 <P><STRONG><a name="[6f]"></a>LCD::Clear()</STRONG> (Thumb, 16 bytes, Stack size 8 bytes, lcd.o(i._ZN3LCD5ClearEv))
@@ -659,16 +659,16 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[71]"></a>LCD::Print(unsigned char&)</STRONG> (Thumb, 16 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD5PrintERh))
-<BR><BR>[Stack]<UL><LI>Max Depth = 128<LI>Call Chain = LCD::Print(unsigned char&) &rArr; LCD::WriteInteger(unsigned) &rArr; LCD::WriteBytes(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<P><STRONG><a name="[71]"></a>LCD::Print(unsigned char)</STRONG> (Thumb, 16 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD5PrintEh))
+<BR><BR>[Stack]<UL><LI>Max Depth = 128<LI>Call Chain = LCD::Print(unsigned char) &rArr; LCD::WriteInteger(unsigned) &rArr; LCD::WriteBytes(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteInteger(unsigned)
 </UL>
 <BR>[Called By]<UL><LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[72]"></a>LCD::Print(unsigned&)</STRONG> (Thumb, 16 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD5PrintERj))
-<BR><BR>[Stack]<UL><LI>Max Depth = 128<LI>Call Chain = LCD::Print(unsigned&) &rArr; LCD::WriteInteger(unsigned) &rArr; LCD::WriteBytes(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<P><STRONG><a name="[72]"></a>LCD::Print(unsigned)</STRONG> (Thumb, 16 bytes, Stack size 16 bytes, lcd.o(i._ZN3LCD5PrintEj))
+<BR><BR>[Stack]<UL><LI>Max Depth = 128<LI>Call Chain = LCD::Print(unsigned) &rArr; LCD::WriteInteger(unsigned) &rArr; LCD::WriteBytes(const char*) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::WriteInteger(unsigned)
 </UL>
@@ -713,13 +713,13 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[56]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[56]"></a>main</STRONG> (Thumb, 254 bytes, Stack size 72 bytes, main.o(i.main))
-<BR><BR>[Stack]<UL><LI>Max Depth = 352<LI>Call Chain = main &rArr; LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
+<P><STRONG><a name="[56]"></a>main</STRONG> (Thumb, 246 bytes, Stack size 64 bytes, main.o(i.main))
+<BR><BR>[Stack]<UL><LI>Max Depth = 344<LI>Call Chain = main &rArr; LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&) &rArr; LCD::WriteByte(GPIO_PinState, char) &rArr; LCD::WriteNibble(char, unsigned char) &rArr; HAL_Delay
 </UL>
 <BR>[Calls]<UL><LI><a href="#[74]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&)
 <LI><a href="#[73]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::SetCursor(unsigned char, unsigned char)
-<LI><a href="#[72]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned&)
-<LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned char&)
+<LI><a href="#[72]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned)
+<LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(unsigned char)
 <LI><a href="#[70]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Print(const char*)
 <LI><a href="#[6f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::Clear()
 <LI><a href="#[60]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_Init
