--- a/Course Lessons - C++/Lesson 6 - Tic Tac Toe/Objects/TicTacToe_Cpp.htm
+++ b/Course Lessons - C++/Lesson 6 - Tic Tac Toe/Objects/TicTacToe_Cpp.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\TicTacToe_Cpp.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\TicTacToe_Cpp.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Tue Oct 26 15:31:59 2021
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Tue Oct 26 16:33:00 2021
 <BR><P>
 <H3>Maximum Stack Usage =        408 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -494,7 +494,8 @@ Global Symbols
 <P><STRONG><a name="[7c]"></a>__aeabi_memclr4</STRONG> (Thumb, 0 bytes, Stack size 4 bytes, rt_memclr_w.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 4<LI>Call Chain = __aeabi_memclr4
 </UL>
-<BR>[Called By]<UL><LI><a href="#[7b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&)
+<BR>[Called By]<UL><LI><a href="#[81]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Keypad::Keypad(pinStruct_t*, pinStruct_t*)
+<LI><a href="#[7b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LCD::LCD(pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&, pinStruct_t&)
 </UL>
 
 <P><STRONG><a name="[aa]"></a>__aeabi_memclr8</STRONG> (Thumb, 0 bytes, Stack size 4 bytes, rt_memclr_w.o(.text), UNUSED)
@@ -795,10 +796,11 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Keypad::GetCharShortPress()
 </UL>
 
-<P><STRONG><a name="[81]"></a>Keypad::Keypad(pinStruct_t*, pinStruct_t*)</STRONG> (Thumb, 192 bytes, Stack size 184 bytes, keypad.o(i._ZN6KeypadC1EP11pinStruct_tS1_))
+<P><STRONG><a name="[81]"></a>Keypad::Keypad(pinStruct_t*, pinStruct_t*)</STRONG> (Thumb, 208 bytes, Stack size 184 bytes, keypad.o(i._ZN6KeypadC1EP11pinStruct_tS1_))
 <BR><BR>[Stack]<UL><LI>Max Depth = 208<LI>Call Chain = Keypad::Keypad(pinStruct_t*, pinStruct_t*) &rArr; HAL_GPIO_Init
 </UL>
 <BR>[Calls]<UL><LI><a href="#[7d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_GPIO_Init
+<LI><a href="#[7c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_memclr4
 </UL>
 <BR>[Called By]<UL><LI><a href="#[59]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
